不具合の改修と仕様の変更
- ラベル名はランキングページから自動取得
- URLの末尾に自動的に`?p=2`などをつけないように修正
- JSONの代わりにJSONC形式を利用

--- a/config.json
+++ b/config.json
@@ -1,7 +1,10 @@
 {
-    "items": {
-        "現実恋愛-すべて":"https://yomou.syosetu.com/rank/genrelist/type/daily_102/"
-    },
+    "items": [
+        // 日間現実恋愛1-50位
+        "https://yomou.syosetu.com/rank/genrelist/type/daily_102/?p=1",
+        // 日間現実恋愛51-100位
+        "https://yomou.syosetu.com/rank/genrelist/type/daily_102/?p=2"
+    ],
     "texts": [],
     "keywords": ["幼馴染"]
 }
